--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ ngrok
 *.log
 *.rdb
 *.pid
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
