--- a/files/service.conf
+++ b/files/service.conf
@@ -1,8 +1,15 @@
 server {
-    listen 443 default;
+    listen 80;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     client_max_body_size 4G;
     charset utf-8;
-    server_name makemeup.co www.makemeup.co;
+    server_name localhost localhost.com;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:DHE-RSA-AES256-SHA;
+    ssl_prefer_server_ciphers on;
 
     server_tokens off;
     access_log /var/log/nginx/prod.access.log;
